tests/chapter_15/invalid_types/cast_to_array_type_2.c
int main(void)
{
    LONG64 arr[10];
    // casts to array type are illegal
    return (int *[10])arr;
}